# fusedpkg

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: code_review.md
scripts/: example.py  example_2.py
src/fusedpkg/: __init__.py  grid_search_common.py  grid_search_fused.py  grid_search_generalized.py  grid_search_group.py  mod5.py  penalized_glm.py
src/fusedpkg/additional_functions/: mod1.py
src/fusedpkg/glm/: __init__.py  penalized.py  preprocessing.py
src/fusedpkg/grid_search/: __init__.py  common.py  fused.py  generalized.py  group.py
src/fusedpkg/old/: mod1.py  mod2 - Copie.py  mod2.py  mod21.py  mod2_clean.py  mod2_refactored.py  mod2_refactored_parallel.py  mod3.py  mod4.py
tests/: test_grid_search_smoke.py  test_mod1.py
tests/subpkg1/: test_mod1.py
