[project]
name = "fusedpkg"
version = "0.1.0"
description = "A Python package that allows to run fused-lasso penalised GLMs"
readme = "README.md"
authors = [
    {name = "Reacfin"},
]

requires-python = ">=3.12"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "cvxpy>=1.5.3",
    "matplotlib>=3.8.4",
    #"re>=2.2.1",
    "scikit-learn>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
